# fantasy-baseball-league-sabermetrics

./: .dockerignore  .env.example  .gitignore  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  justfile
apps/api/: Dockerfile  Dockerfile.dev  alembic.ini  entrypoint.sh  pyproject.toml  test_bulk_statcast.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 56aba76fca58_initial_final_state.py  a1b2c3d4e5f6_add_unique_constraint_player_mapping.py  b1c2d3e4f5a6_add_draft_pick_and_draft_summary.py  c1d2e3f4a5b6_add_pvs_latest_lookup_index.py
apps/api/src/moose_api/: main.py  worker.py
apps/api/src/moose_api/ai/: cost_tracker.py  llm_router.py  prompt_loader.py
apps/api/src/moose_api/core/: bootstrap.py  circuit_breaker.py  config.py  csrf.py  database.py  rate_limit.py  redis.py  rendering.py  security.py
apps/api/src/moose_api/models/: __init__.py  ai_usage.py  base.py  draft.py  free_agent.py  league.py  manager_briefing.py  matchup.py  notification.py  player.py  recap.py  roster.py  session_log.py  stats.py  team.py  user.py  yahoo_token.py
apps/api/src/moose_api/routers/: admin.py  auth.py  league.py  players.py  recaps.py
apps/api/src/moose_api/schemas/: admin.py  auth.py  league.py  player.py  recap.py
apps/api/src/moose_api/services/: gambling_service.py  mlb_client.py  roster_optimizer.py  statcast_client.py  valuation_engine.py  yahoo_client.py
apps/api/src/moose_api/tasks/: daily_sync.py  generate_briefing.py  generate_draft_summary.py  generate_recap.py  load_fangraphs.py  load_fangraphs_ros.py  load_mlb_roster.py  (+13 more)
(+64 files in other folders)
